--- a/src/components/keypad/keypad.module.css
+++ b/src/components/keypad/keypad.module.css
@@ -1,39 +1,33 @@
 .keypadBody {
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .numberButtonCircle {
-    border-radius: 50%;
-    border: 0;
-    background-color: dimgray;
-    padding: 25px;
-    margin: 10px;
-    font-size: 1.5em;
+  border-radius: 50%;
+  border: 0;
+  background-color: dimgray;
+  padding: 25px;
+  margin: 10px;
+  font-size: 1.5em;
+  color: white;
+}
+
+.highlighted {
+  background-color: darkgoldenrod;
 }
 
 .numberButtonCircle:hover {
-    border-radius: 50%;
-    border: 0;
-    background-color: grey;
-    padding: 25px;
-    margin: 10px;
-    font-size: 1.5em;
+  border-radius: 50%;
+  border: 0;
+  background-color: grey;
+  padding: 25px;
+  margin: 10px;
+  font-size: 1.5em;
 }
 
-.numberButtonValue {
-    width:100%;
-    padding-top:50%;
-    padding-bottom:50%;
-    line-height:1em;
-    margin-top:-0.5em;
-    margin-bottom:-0.5em;      
-    text-align:center;
-    font-size:30px;
-    font-weight:bold;
-    color: white;
+.highlighted:hover {
+  background-color: rgb(167, 137, 61);
 }
-
-
