--- a/src/components/display/display.module.css
+++ b/src/components/display/display.module.css
@@ -1,12 +1,17 @@
 .displayScreen {
-    width: 100%;
-    background-color: hotpink;
-    float: right;
-    color: white;
-    font-size: 1.5rem;
+  width: 100%;
+  background-color: #181817;
+  color: white;
+  font-size: 1.5rem;
+  box-sizing: border-box;
+  overflow: hidden;
+  float: right;
 }
 
 .displayResult {
-    float: right;
-    padding: 0 1em;
+  max-width: 100%;
+  float: right;
+  box-sizing: border-box;
+  padding: 0.5em 2rem;
+  font-size: 2em;
 }
